[gd_scene load_steps=14 format=3 uid="uid://c7yygjgs3w2h6"]

[ext_resource type="Script" path="res://map_transition.gd" id="1_35y7f"]
[ext_resource type="Texture2D" uid="uid://csjod8s8oeyo0" path="res://Art/mapStart.png" id="2_knmgk"]
[ext_resource type="Texture2D" uid="uid://bjvk857m42vug" path="res://Art/mapNodeA.png" id="3_uae7i"]
[ext_resource type="Texture2D" uid="uid://cgsge18b6jc24" path="res://Art/mapNodeB.png" id="4_diu8g"]
[ext_resource type="Texture2D" uid="uid://dv5jshkpv6f7y" path="res://Art/mapNodeC.png" id="5_fa1h6"]
[ext_resource type="Texture2D" uid="uid://dmp2ot2jq021p" path="res://Art/mapNodeD.png" id="6_ba60p"]
[ext_resource type="Texture2D" uid="uid://b8tubanrqi25a" path="res://Art/mapNodeE.png" id="7_l3v3h"]
[ext_resource type="Texture2D" uid="uid://bal8hmrypt1wr" path="res://Art/mapNodeF.png" id="8_u1j7i"]
[ext_resource type="Texture2D" uid="uid://bllam7bt2r0ba" path="res://Art/mapNodeG.png" id="9_rfgn8"]

[sub_resource type="Animation" id="Animation_ucun5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fwoer"]
resource_name = "fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8djfu"]
resource_name = "fade_to_white"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jtwf"]
_data = {
"RESET": SubResource("Animation_ucun5"),
"fade_to_black": SubResource("Animation_fwoer"),
"fade_to_white": SubResource("Animation_8djfu")
}

[node name="map_transition" type="CanvasLayer"]
layer = 0
script = ExtResource("1_35y7f")

[node name="MapStart" type="Sprite2D" parent="."]
position = Vector2(1024, 108)
scale = Vector2(0.12, 0.126)
texture = ExtResource("2_knmgk")

[node name="MapNodeG" type="Sprite2D" parent="."]
position = Vector2(3089, -1090)
texture = ExtResource("9_rfgn8")

[node name="MapNodeA" type="Sprite2D" parent="."]
position = Vector2(2465, 583)
texture = ExtResource("3_uae7i")

[node name="MapNodeB" type="Sprite2D" parent="."]
position = Vector2(880, 2162)
texture = ExtResource("4_diu8g")

[node name="MapNodeC" type="Sprite2D" parent="."]
position = Vector2(3324, 2117)
texture = ExtResource("5_fa1h6")

[node name="MapNodeD" type="Sprite2D" parent="."]
position = Vector2(4636, 658)
texture = ExtResource("6_ba60p")

[node name="MapNodeE" type="Sprite2D" parent="."]
position = Vector2(5304, 2174)
texture = ExtResource("7_l3v3h")

[node name="MapNodeF" type="Sprite2D" parent="."]
position = Vector2(883, -1113)
texture = ExtResource("8_u1j7i")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 897.0
offset_right = -1.0
offset_bottom = -435.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.901961)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jtwf")
}
